updated exercise answers

--- a/model_evalation.ipynb
+++ b/model_evalation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "actual_cat        13        34"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "[200 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "Name: actual, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[5000 rows x 5 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "Name: actual, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -766,11 +766,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4205</th>\n",
+       "      <th>3</th>\n",
+       "      <td>dog</td>\n",
        "      <td>dog</td>\n",
        "      <td>dog</td>\n",
        "      <td>cat</td>\n",
-       "      <td>dog</td>\n",
        "      <td>dog</td>\n",
        "      <td>dog</td>\n",
        "    </tr>\n",
@@ -779,11 +779,11 @@
        "</div>"
       ],
       "text/plain": [
-       "     actual model1 model2 model3 model4 baseline\n",
-       "4205    dog    dog    cat    dog    dog      dog"
+       "  actual model1 model2 model3 model4 baseline\n",
+       "3    dog    dog    dog    cat    dog      dog"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -855,48 +855,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model1 precision: 89.00%\n",
-      "model2 precision: 89.32%\n",
-      "model3 precision: 65.99%\n",
-      "model4 precision: 73.12%\n",
-      "baseline precision: 65.08%\n"
+      "   model1 recall: 80.33%\n",
+      "   model2 recall: 49.08%\n",
+      "   model3 recall: 50.86%\n",
+      "   model4 recall: 95.57%\n",
+      "   baseline recall: 100.00%\n"
      ]
     }
    ],
    "source": [
-    "# precision - minimize pred_dog when actual_cat\n",
+    "# recall - actual_dog\n",
     "for col in gyp.iloc[:,1:].columns.to_list():\n",
-    "    prc(gyp,col,'dog')\n",
-    "# recommend model2 and model1 as backup"
+    "    rec(gyp,col,'dog')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model1 [0.89002383]\n",
-      "model2 [0.89317673]\n",
-      "model3 [0.65988836]\n",
-      "model4 [0.73124853]\n",
-      "baseline [0.6508]\n"
+      "model1 [0.80331899]\n",
+      "model2 [0.49078058]\n",
+      "model3 [0.50860479]\n",
+      "model4 [0.95574677]\n",
+      "baseline [1.]\n"
      ]
     }
    ],
    "source": [
     "for col in gyp.iloc[:,1:].columns.to_list():\n",
-    "    print(col,precision_score(gyp.actual,gyp[col],labels=['dog'],average=None))"
+    "    print(col,recall_score(gyp.actual,gyp[col],labels=['dog'],average=None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subset1 = gyp[gyp.model1 == 'dog']\n",
+    "subset2 = gyp[gyp.model2 == 'dog']\n",
+    "subset3 = gyp[gyp.model3 == 'dog']\n",
+    "subset4 = gyp[gyp.model4 == 'dog']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8900238338440586"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset1.actual == subset1.model1).mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8931767337807607"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset2.actual == subset2.model2).mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6598883572567783"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset3.actual == subset3.model3).mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7312485304490948"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset4.actual == subset4.model4).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recommend model2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model1 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         dog       0.89      0.80      0.84      3254\n",
+      "\n",
+      "   micro avg       0.89      0.80      0.84      3254\n",
+      "   macro avg       0.89      0.80      0.84      3254\n",
+      "weighted avg       0.89      0.80      0.84      3254\n",
+      "\n",
+      "model2 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         dog       0.89      0.49      0.63      3254\n",
+      "\n",
+      "   micro avg       0.89      0.49      0.63      3254\n",
+      "   macro avg       0.89      0.49      0.63      3254\n",
+      "weighted avg       0.89      0.49      0.63      3254\n",
+      "\n",
+      "model3 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         dog       0.66      0.51      0.57      3254\n",
+      "\n",
+      "   micro avg       0.66      0.51      0.57      3254\n",
+      "   macro avg       0.66      0.51      0.57      3254\n",
+      "weighted avg       0.66      0.51      0.57      3254\n",
+      "\n",
+      "model4 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         dog       0.73      0.96      0.83      3254\n",
+      "\n",
+      "   micro avg       0.73      0.96      0.83      3254\n",
+      "   macro avg       0.73      0.96      0.83      3254\n",
+      "weighted avg       0.73      0.96      0.83      3254\n",
+      "\n",
+      "baseline \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         dog       0.65      1.00      0.79      3254\n",
+      "\n",
+      "   micro avg       0.65      1.00      0.79      3254\n",
+      "   macro avg       0.65      1.00      0.79      3254\n",
+      "weighted avg       0.65      1.00      0.79      3254\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in gyp.iloc[:,1:].columns.to_list():\n",
+    "    print(col,'\\n',classification_report(gyp.actual,gyp[col],labels=['dog']))"
    ]
   },
   {
@@ -908,111 +1070,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model1 recall: 81.50%\n",
+      "   model2 recall: 89.06%\n",
+      "   model3 recall: 51.15%\n",
+      "   model4 recall: 34.54%\n",
+      "   baseline recall: 0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recall - actual_cat\n",
+    "for col in gyp.iloc[:,1:].columns.to_list():\n",
+    "    rec(gyp,col,'cat')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>actual</th>\n",
-       "      <th>model1</th>\n",
-       "      <th>model2</th>\n",
-       "      <th>model3</th>\n",
-       "      <th>model4</th>\n",
-       "      <th>baseline</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4794</th>\n",
-       "      <td>dog</td>\n",
-       "      <td>dog</td>\n",
-       "      <td>dog</td>\n",
-       "      <td>cat</td>\n",
-       "      <td>dog</td>\n",
-       "      <td>cat</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     actual model1 model2 model3 model4 baseline\n",
-       "4794    dog    dog    dog    cat    dog      cat"
+       "[['model1', 0.6897721764420747],\n",
+       " ['model2', 0.4841220423412204],\n",
+       " ['model3', 0.358346709470305],\n",
+       " ['model4', 0.8072289156626506],\n",
+       " ['baseline', nan]]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gyp['baseline'] = gyp.actual.value_counts().index.min()\n",
-    "gyp.sample()"
+    "model_pre = []\n",
+    "for model in gyp.columns[1:]:\n",
+    "    subset = gyp[gyp[model] == 'cat']\n",
+    "    precision = (subset.actual == subset[model]).mean()\n",
+    "    model_pre.append([model,precision])\n",
+    "model_pre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model1 precision: 68.98%\n",
-      "model2 precision: 48.41%\n",
-      "model3 precision: 35.83%\n",
-      "model4 precision: 80.72%\n",
-      "baseline precision: 34.92%\n"
+      "model1 [0.81500573]\n",
+      "model2 [0.8906071]\n",
+      "model3 [0.51145475]\n",
+      "model4 [0.34536082]\n",
+      "baseline [0.]\n"
      ]
     }
    ],
    "source": [
-    "# precision - minimize pred_cat when actual_dog\n",
     "for col in gyp.iloc[:,1:].columns.to_list():\n",
-    "    prc(gyp,col,'cat')\n",
-    "# recommend model4"
+    "    print(col,recall_score(gyp.actual,gyp[col],labels=['cat'],average=None))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recommend model2 and model1 as backup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model1 [0.68977218]\n",
-      "model2 [0.48412204]\n",
-      "model3 [0.35834671]\n",
-      "model4 [0.80722892]\n",
-      "baseline [0.3492]\n"
+      "model1 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         cat       0.69      0.82      0.75      1746\n",
+      "\n",
+      "   micro avg       0.69      0.82      0.75      1746\n",
+      "   macro avg       0.69      0.82      0.75      1746\n",
+      "weighted avg       0.69      0.82      0.75      1746\n",
+      "\n",
+      "model2 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         cat       0.48      0.89      0.63      1746\n",
+      "\n",
+      "   micro avg       0.48      0.89      0.63      1746\n",
+      "   macro avg       0.48      0.89      0.63      1746\n",
+      "weighted avg       0.48      0.89      0.63      1746\n",
+      "\n",
+      "model3 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         cat       0.36      0.51      0.42      1746\n",
+      "\n",
+      "   micro avg       0.36      0.51      0.42      1746\n",
+      "   macro avg       0.36      0.51      0.42      1746\n",
+      "weighted avg       0.36      0.51      0.42      1746\n",
+      "\n",
+      "model4 \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "         cat       0.81      0.35      0.48      1746\n",
+      "\n",
+      "   micro avg       0.81      0.35      0.48      1746\n",
+      "   macro avg       0.81      0.35      0.48      1746\n",
+      "weighted avg       0.81      0.35      0.48      1746\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for col in gyp.iloc[:,1:].columns.to_list():\n",
-    "    print(col,precision_score(gyp.actual,gyp[col],labels=['cat'],average=None))"
+    "for col in gyp.iloc[:,1:-1].columns.to_list():\n",
+    "    print(col,'\\n',classification_report(gyp.actual,gyp[col],labels=['cat']))"
    ]
   },
   {
@@ -1026,15 +1215,6 @@
     "- sklearn.metrics.precision_score\n",
     "- sklearn.metrics.recall_score\n",
     "- sklearn.metrics.classification_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imported and tested"
    ]
   },
   {
